# ai_agent_course_aihero

./: README.md
aihero/course/: Day 1.ipynb  Untitled.ipynb  exercise.ipynb  pyproject.toml
aihero/course/.ipynb_checkpoints/: Day 1-checkpoint.ipynb  exercise-checkpoint.ipynb
aihero/project/: evidently_chunks.csv  evidently_chunks.md  evidently_chunks2.md  exercise.ipynb  exercise_day2.py  my_data.csv  pyproject.toml  save_code_and_summary.md  save_summary_code.ipynb  save_summary_code.py
hanyalatihan/: app_1.py  main.py  pyproject.toml  ttg_app_kesatu.md
