[project]
name = "course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.32.0",
    "minsearch>=0.0.7",
    "python-frontmatter",
    "requests",
    "sentence-transformers>=5.1.1",
    "tqdm",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
